More layout issues.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,11 +3,12 @@
     position: relative;
     width: 100%;
     height: 100%;
+    font-size: 16px;
 }
 
 .App-header {
     position: relative;
-    height: 150px;
+    box-sizing: border-box;
     padding: 20px 20px 20px 30px;
     transition: all 1s;
     height: 325px;
@@ -16,6 +17,7 @@
 .selection-panel {
     width: 55%;
     flex: 1;
+    max-width: 720px;
 }
 
 @media all and (max-width: 768px) {
